--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel="stylesheet" href="css/main.css">
 <iframe width="560" height="315" 
         src="https://www.youtube.com/embed/DyZiz2N6FxM" 
         frameborder="0" 
